--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -14,91 +15,55 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
-            android:id="@+id/linearLayout2"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/courseNameText"
+            android:layout_width="93dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_marginStart="18dp"
+            android:layout_marginTop="10dp"
+            android:text="@string/course_name"
+            android:textColor="@color/addEventTextColor" />
 
-            <TextView
-                android:id="@+id/courseNameText"
-                android:layout_width="93dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="18dp"
-                android:layout_marginTop="10dp"
-                android:text="@string/course_name"
-                android:textColor="@color/addEventTextColor" />
-
-            <EditText
-                android:id="@+id/courseNameInput"
-                android:layout_width="363dp"
-                android:layout_height="36dp"
-                android:layout_marginLeft="17dp"
-                android:layout_marginTop="3dp"
-                android:layout_marginRight="17dp"
-                android:background="@drawable/edit__text_design"
-                android:hint="@string/enter_the_course_name"
-                android:importantForAutofill="no"
-                android:inputType="textNoSuggestions"
-                android:paddingStart="5dp"
-                android:paddingEnd="5dp"
-                android:textColor="@color/addEventTextHintColor"
-                android:textColorHint="@color/addEventTextHintColor"
-                android:textColorLink="@color/colorAccent" />
-
-            <TextView
-                android:id="@+id/classNameText"
-                android:layout_width="93dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="18dp"
-                android:layout_marginTop="10dp"
-                android:text="@string/class_name"
-                android:textColor="@color/addEventTextColor" />
-
-            <EditText
-                android:id="@+id/classNameInput"
-                android:layout_width="363dp"
-                android:layout_height="36dp"
-                android:layout_marginLeft="17dp"
-                android:layout_marginTop="3dp"
-                android:layout_marginRight="17dp"
-                android:background="@drawable/edit__text_design"
-                android:hint="@string/enter_the_name_of_the_class"
-                android:importantForAutofill="no"
-                android:inputType="textNoSuggestions"
-                android:paddingStart="5dp"
-                android:paddingEnd="5dp"
-                android:textColor="@color/addEventTextHintColor"
-                android:textColorHint="@color/addEventTextHintColor"
-                android:textColorLink="@color/colorAccent" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/finishTimeText"
-            android:layout_width="match_parent"
+        <EditText
+            android:id="@+id/courseNameInput"
+            android:layout_width="366dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_marginLeft="17dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginRight="17dp"
+            android:hint="@string/enter_the_course_name"
+            android:importantForAutofill="no"
+            android:inputType="textPersonName"
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp"
+            android:textColor="@color/addEventTextHintColor"
+            android:textColorHint="@color/addEventTextHintColor"
+            android:textColorLink="@color/colorAccent" />
 
-            <TextView
-                android:id="@+id/startTimeText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="18dp"
-                android:layout_marginTop="10dp"
-                android:layout_weight="1"
-                android:text="@string/start_time"
-                android:textColor="@color/addEventTextColor" />
+        <TextView
+            android:id="@+id/classNameText"
+            android:layout_width="93dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="18dp"
+            android:layout_marginTop="10dp"
+            android:text="@string/class_name"
+            android:textColor="@color/addEventTextColor" />
 
-            <TextView
-                android:layout_width="32dp"
-                android:layout_height="match_parent"
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="10dp"
-                android:layout_weight="1"
-                android:text="@string/finish_time"
-                android:textColor="@color/addEventTextColor" />
-        </LinearLayout>
+        <EditText
+            android:id="@+id/classNameInput"
+            android:layout_width="368dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="17dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginRight="17dp"
+            android:hint="@string/enter_the_name_of_the_class"
+            android:importantForAutofill="no"
+            android:inputType="textCapWords"
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp"
+            android:textColor="@color/addEventTextHintColor"
+            android:textColorHint="@color/addEventTextHintColor"
+            android:textColorLink="@color/colorAccent" />
 
     </LinearLayout>
 
@@ -113,27 +78,26 @@
 
         <Button
             android:id="@+id/startTimeButton"
-            android:layout_width="150dp"
-            android:layout_height="62dp"
-            android:layout_marginStart="17dp"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="205dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="15dp"
             android:backgroundTint="@color/editTextDesignColor"
             android:onClick="startTime"
-            android:text="@string/time_button_default_text" />
-
-        <Space
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1" />
+            android:text="@string/start_time"
+            android:textColor="@color/addEventTextColor" />
 
         <Button
             android:id="@+id/finishTimeButton"
-            android:layout_width="150dp"
-            android:layout_height="62dp"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="205dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="15dp"
             android:layout_marginEnd="17dp"
             android:backgroundTint="@color/editTextDesignColor"
             android:onClick="finishTime"
-            android:text="@string/time_button_default_text" />
+            android:text="@string/finish_time"
+            android:textColor="@color/addEventTextColor" />
 
     </LinearLayout>
 
@@ -141,19 +105,21 @@
         android:id="@+id/linearLayout4"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="42dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent">
 
         <Button
             android:id="@+id/cancelButton"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
             android:layout_width="112dp"
             android:layout_height="64dp"
             android:layout_marginStart="17dp"
             android:onClick="cancelButton"
-            android:text="@string/cancel" />
+            android:text="@string/cancel"
+            android:textColor="@color/addEventTextColor" />
 
         <Space
             android:layout_width="0dp"
@@ -162,11 +128,13 @@
 
         <Button
             android:id="@+id/saveButton"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
             android:layout_width="112dp"
             android:layout_height="64dp"
             android:layout_marginEnd="17dp"
             android:onClick="saveButton"
-            android:text="@string/save" />
+            android:text="@string/save"
+            android:textColor="@color/addEventTextColor" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
