--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
     <color name="black">#000000</color>
     <color name="afwhite">#F2F3F4</color>
     <color name="addEventTextColor">@color/black</color>
-    <color name="addEventTextHintColor">#3C3B3B</color>
+    <color name="addEventTextHintColor">#717070</color>
     <color name="editTextDesignColor">@color/silver</color>
 
 </resources>
