--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -5,4 +5,5 @@
     </style>
     <color name="customBackgroundColor">#000000</color>
     <color name="customAppNameColor">#9e9e9e</color>
+    <color name="customTimeTextColor">@color/silver</color>
 </resources>
