--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -15,4 +15,17 @@
     <color name="addEventTextHintColor">@color/silver</color>
     <color name="editTextDesignColor">@color/white</color>
     <color name="deleteButtonBackground">@color/cardview_dark_background</color>
+
+    <color name="event_color_01">#59dbe0</color>
+    <color name="event_color_02">#f57f68</color>
+    <color name="event_color_03">#87d288</color>
+    <color name="event_color_04">#f8b552</color>
+
+    <color name="toolbar">@color/black</color>
+    <color name="toolbar_text">@color/afwhite</color>
+    <color name="accent">#2789e4</color>
+    <color name="todayColumnBackgroundColor">#1848adff</color>
+    <color name="hourSeparatorColor">#262626</color>
+
+
 </resources>
