--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,17 @@
     <color name="editTextDesignColor">@color/silver</color>
     <color name="deleteButtonBackground">@color/white</color>
 
+    <color name="event_color_01">#59dbe0</color>
+    <color name="event_color_02">#f57f68</color>
+    <color name="event_color_03">#87d288</color>
+    <color name="event_color_04">#f8b552</color>
+
+    <color name="toolbar">#efefef</color>
+    <color name="toolbar_text">#8f000000</color>
+    <color name="accent">#2789e4</color>
+    <color name="todayColumnBackgroundColor">#1848adff</color>
+    <color name="hourSeparatorColor">@color/silver</color>
+
 
 
 </resources>
