--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -17,6 +17,9 @@
         android:icon="@drawable/ic_baseline_add_24"
         android:title="@string/add_event"
         app:showAsAction="always" />
-
+    <item
+        android:id="@+id/actionAbout"
+        android:title="@string/about"
+        app:showAsAction="ifRoom" />
 
 </menu>
