--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -11,7 +11,7 @@
         android:id="@+id/actionNightMode"
         android:icon="@drawable/ic_baseline_dark_mode_24"
         android:title="@string/night_mode"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
     <item
         android:id="@+id/actionAddEvent"
         android:icon="@drawable/ic_baseline_add_24"
